testsuite/tests/typecheck/should_fail/UnliftedNewtypesMultiFieldGadt.stderr

UnliftedNewtypesMultiFieldGadt.hs:19:11: error: [GHC-83865]
    • Expecting an unlifted type, but ‘Bool’ is lifted
    • In the type ‘Bool’
      In the definition of data constructor ‘FooC’
      In the newtype declaration for ‘Foo’

UnliftedNewtypesMultiFieldGadt.hs:19:19: error: [GHC-83865]
    • Expecting an unlifted type, but ‘Char’ is lifted
    • In the type ‘Char’
      In the definition of data constructor ‘FooC’
      In the newtype declaration for ‘Foo’
